--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,7 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
-        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.apache.axis2/axis2 -->
         <dependency>
             <groupId>org.apache.axis2</groupId>
@@ -75,11 +72,11 @@
             <version>1.7.4</version>
         </dependency>
 
-        <dependency>
+      <!--  <dependency>
             <groupId>org.apache.axis2</groupId>
             <artifactId>axis2-integration</artifactId>
             <version>1.7.4</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.jvnet.hudson</groupId>
             <artifactId>ganymed-ssh2</artifactId>
@@ -113,10 +110,20 @@
             <version>1.7.4</version>
         </dependency>
 
-        <dependency>
+     <!--   <dependency>
             <groupId>org.apache.axis2</groupId>
             <artifactId>axis2-jaxws-integration</artifactId>
             <version>1.7.4</version>
+        </dependency>-->
+        <!--<dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.4.2</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
 
         <dependency>
