--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,19 @@
             <artifactId>axis2-java2wsdl-maven-plugin</artifactId>
             <version>1.7.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <scope>test</scope>
+            </dependency>
 
         <dependency>
             <groupId>org.apache.axis2</groupId>
