--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,15 @@ server:
   port: 8080
   servlet:
     context-path: /information
+
+
 spring:
   data:
     mongodb:
       uri: mongodb://localhost:27017/airport
+  thymeleaf:
+    prefix: classpath:/static/
+  mvc:
+    view:
+      prefix: /
+      suffix: .html
